ffi/include/int2dds-ffi.h

/**
 * Opaque handle to a DataWriter
 */
typedef struct Int2DdsDataWriter Int2DdsDataWriter;
/**
 * Opaque QoS handle for DataWriter
 */
typedef struct Int2DdsDataWriterQos Int2DdsDataWriterQos;
/**
 * Opaque handle to a DomainParticipant
 */
typedef struct Int2DdsParticipant Int2DdsParticipant;
/**
 * Opaque handle to a Publisher
 */
typedef struct Int2DdsPublisher Int2DdsPublisher;
/**
 * Opaque QoS handle for Publisher
 */
typedef struct Int2DdsPublisherQos Int2DdsPublisherQos;
/**
 * Opaque handle to a Topic
 */
typedef struct Int2DdsTopic Int2DdsTopic;
/**
 * FFI return codes
 */
typedef int32_t Int2DdsRet;
/**
 * C-compatible offered deadline missed status
 */
typedef struct Int2DdsOfferedDeadlineMissedStatus {
  /**
   * Total cumulative count of missed deadlines
   */
  int32_t total_count;
  /**
   * Change in total_count since last access
   */
  int32_t total_count_change;
  /**
   * Handle of the last instance for which deadline was missed
   */
  uint8_t last_instance_handle[16];
} Int2DdsOfferedDeadlineMissedStatus;
/**
 * C-compatible offered incompatible QoS status
 */
typedef struct Int2DdsOfferedIncompatibleQosStatus {
  /**
   * Total cumulative count of incompatible QoS
   */
  int32_t total_count;
  /**
   * Change in total_count since last access
   */
  int32_t total_count_change;
  /**
   * ID of the last incompatible policy
   */
  enum Int2DdsQosPolicyId last_policy_id;
  /**
   * Count of policies (always 0 for now, policies list not exposed)
   */
  uint32_t policies_count;
} Int2DdsOfferedIncompatibleQosStatus;
/**
 * C-compatible liveliness lost status
 */
typedef struct Int2DdsLivelinessLostStatus {
  /**
   * Total cumulative count of times liveliness was lost
   */
  int32_t total_count;
  /**
   * Change in total_count since last access
   */
  int32_t total_count_change;
} Int2DdsLivelinessLostStatus;
/**
 * C-compatible DataWriter listener callbacks
 */
typedef struct Int2DdsDataWriterListener {
  Int2DdsOnPublicationMatchedCallback on_publication_matched;
  Int2DdsOnOfferedDeadlineMissedCallback on_offered_deadline_missed;
  Int2DdsOnOfferedIncompatibleQosCallback on_offered_incompatible_qos;
  Int2DdsOnLivelinessLostCallback on_liveliness_lost;
  Int2DdsUserContext user_context;
} Int2DdsDataWriterListener;
/**
 * Create a Publisher
 *
 * # Safety
 * - `participant` must be a valid participant
 * - `qos` can be null for default QoS
 * - `publisher_out` must be a valid pointer to a null pointer
 * - The returned publisher must be freed with `int2dds_delete_publisher`
 */
Int2DdsRet int2dds_create_publisher(const struct Int2DdsParticipant *participant,
                                    struct Int2DdsPublisher **publisher_out);
/**
 * Create a Publisher with QoS
 *
 * # Safety
 * - `participant` must be a valid participant
 * - `qos` must be a valid publisher QoS handle
 * - `publisher_out` must be a valid pointer to a null pointer
 */
Int2DdsRet int2dds_create_publisher_with_qos(const struct Int2DdsParticipant *participant,
                                             const struct Int2DdsPublisherQos *qos,
                                             struct Int2DdsPublisher **publisher_out);
/**
 * Set QoS on a Publisher
 *
 * Applies new QoS policies to an existing Publisher. Some policies can only
 * be changed before the entity is enabled; attempting to change immutable
 * policies on an enabled entity returns IMMUTABLE_POLICY.
 *
 * # Safety
 * - `publisher` must be a valid publisher
 * - `qos` must be a valid publisher QoS handle
 */
Int2DdsRet int2dds_publisher_set_qos(const struct Int2DdsPublisher *publisher,
                                     const struct Int2DdsPublisherQos *qos);
/**
 * Get QoS from a Publisher
 *
 * Returns a new QoS handle containing the current QoS policies of the Publisher.
 * The returned handle must be freed with `int2dds_publisher_qos_destroy`.
 *
 * # Safety
 * - `publisher` must be a valid publisher
 * - `qos_out` must be a valid pointer to a null pointer
 */
Int2DdsRet int2dds_publisher_get_qos(const struct Int2DdsPublisher *publisher,
                                     struct Int2DdsPublisherQos **qos_out);
/**
 * Set QoS on a DataWriter
 *
 * Applies new QoS policies to an existing DataWriter. Some policies can only
 * be changed before the entity is enabled; attempting to change immutable
 * policies on an enabled entity returns IMMUTABLE_POLICY.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `qos` must be a valid datawriter QoS handle
 */
Int2DdsRet int2dds_datawriter_set_qos(const struct Int2DdsDataWriter *writer,
                                      const struct Int2DdsDataWriterQos *qos);
/**
 * Get QoS from a DataWriter
 *
 * Returns a new QoS handle containing the current QoS policies of the DataWriter.
 * The returned handle must be freed with `int2dds_datawriter_qos_destroy`.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `qos_out` must be a valid pointer to a null pointer
 */
Int2DdsRet int2dds_datawriter_get_qos(const struct Int2DdsDataWriter *writer,
                                      struct Int2DdsDataWriterQos **qos_out);
/**
 * Delete a Publisher
 *
 * # Safety
 * - `publisher` must be a valid publisher
 * - `publisher` must not be used after this call
 * - All DataWriters created by this publisher must be deleted first
 */
Int2DdsRet int2dds_delete_publisher(struct Int2DdsPublisher *publisher);
/**
 * Create a DataWriter
 *
 * # Safety
 * - `publisher` must be a valid publisher
 * - `topic` must be a valid topic
 * - `qos` can be null for default QoS
 * - `writer_out` must be a valid pointer to a null pointer
 * - The returned writer must be freed with `int2dds_delete_datawriter`
 */
Int2DdsRet int2dds_create_datawriter(const struct Int2DdsPublisher *publisher,
                                     const struct Int2DdsTopic *topic,
                                     const struct Int2DdsDataWriterQos *qos,
                                     struct Int2DdsDataWriter **writer_out);
/**
 * Create a DataWriter with listener callbacks
 *
 * # Safety
 * - `publisher` must be a valid publisher
 * - `topic` must be a valid topic
 * - `qos` can be null for default QoS
 * - `listener` can be null for no listener
 * - `mask` specifies which status changes trigger callbacks
 * - `writer_out` must be a valid pointer to a null pointer
 * - The returned writer must be freed with `int2dds_delete_datawriter`
 * - Listener callbacks must be thread-safe and remain valid until writer is deleted
 */
Int2DdsRet int2dds_create_datawriter_with_listener(const struct Int2DdsPublisher *publisher,
                                                   const struct Int2DdsTopic *topic,
                                                   const struct Int2DdsDataWriterQos *qos,
                                                   const struct Int2DdsDataWriterListener *listener,
                                                   uint32_t mask,
                                                   struct Int2DdsDataWriter **writer_out);
/**
 * Set or update the listener for a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `listener` can be null to remove the listener
 * - `mask` specifies which status changes trigger callbacks
 * - Listener callbacks must be thread-safe
 */
Int2DdsRet int2dds_datawriter_set_listener(struct Int2DdsDataWriter *writer,
                                           const struct Int2DdsDataWriterListener *listener,
                                           uint32_t mask);
/**
 * Get the current listener from a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `listener_out` must be a valid pointer to Int2DdsDataWriterListener
 * - Returns a copy of the listener callbacks and user context
 */
Int2DdsRet int2dds_datawriter_get_listener(const struct Int2DdsDataWriter *writer,
                                           struct Int2DdsDataWriterListener *listener_out);
/**
 * Delete a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `writer` must not be used after this call
 */
Int2DdsRet int2dds_delete_datawriter(struct Int2DdsDataWriter *writer);
/**
 * Get publication matched status
 *
 * Returns the number of matched readers for this DataWriter.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `total_count_out` must be a valid pointer
 * - `current_count_out` must be a valid pointer
 */
Int2DdsRet int2dds_get_publication_matched_status(const struct Int2DdsDataWriter *writer,
                                                  int32_t *total_count_out,
                                                  int32_t *current_count_out);
/**
 * Get liveliness lost status for a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `status_out` must be a valid pointer
 */
Int2DdsRet int2dds_datawriter_get_liveliness_lost_status(const struct Int2DdsDataWriter *writer,
                                                         struct Int2DdsLivelinessLostStatus *status_out);
/**
 * Get offered deadline missed status for a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `status_out` must be a valid pointer
 */
Int2DdsRet int2dds_datawriter_get_offered_deadline_missed_status(const struct Int2DdsDataWriter *writer,
                                                                 struct Int2DdsOfferedDeadlineMissedStatus *status_out);
/**
 * Get offered incompatible QoS status for a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `status_out` must be a valid pointer
 */
Int2DdsRet int2dds_datawriter_get_offered_incompatible_qos_status(const struct Int2DdsDataWriter *writer,
                                                                  struct Int2DdsOfferedIncompatibleQosStatus *status_out);
/**
 * Delete all entities contained by a publisher
 *
 * This operation deletes all DataWriter objects contained by this Publisher.
 *
 * # Safety
 * - `publisher` must be a valid publisher
 */
Int2DdsRet int2dds_publisher_delete_contained_entities(const struct Int2DdsPublisher *publisher);
/**
 * Write pre-serialized data to a DataWriter, bypassing TypeSupport serialization.
 *
 * The caller is responsible for CDR-serializing the data (including the
 * encapsulation header) before calling this function.
 *
 * # Parameters
 * - `writer`: A valid datawriter
 * - `data`: Pointer to the CDR-serialized byte buffer
 * - `data_len`: Length of the serialized data in bytes
 * - `key`: Ignored, retained for ABI compatibility. The instance key and KeyHash are
 *   derived canonically from `data` (the full serialized sample); pass null/0.
 * - `key_len`: Ignored, retained for ABI compatibility
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `data` must point to at least `data_len` readable bytes
 * - If `key` is not null, it must point to at least `key_len` readable bytes
 */
Int2DdsRet int2dds_write_serialized(const struct Int2DdsDataWriter *writer,
                                    const uint8_t *data,
                                    uintptr_t data_len,
                                    const uint8_t *key,
                                    uintptr_t key_len);
/**
 * Write pre-serialized data with an explicit source timestamp.
 *
 * Same as `int2dds_write_serialized`, but allows the caller to specify a
 * source timestamp instead of using the current time.
 *
 * # Parameters
 * - `writer`: A valid datawriter
 * - `data`: Pointer to the CDR-serialized byte buffer
 * - `data_len`: Length of the serialized data in bytes
 * - `key`: Ignored, retained for ABI compatibility. The instance key and KeyHash are
 *   derived canonically from `data` (the full serialized sample); pass null/0.
 * - `key_len`: Ignored, retained for ABI compatibility
 * - `timestamp_sec`: Seconds component of the source timestamp
 * - `timestamp_nanosec`: Nanoseconds component of the source timestamp
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `data` must point to at least `data_len` readable bytes
 * - If `key` is not null, it must point to at least `key_len` readable bytes
 */
Int2DdsRet int2dds_write_serialized_w_timestamp(const struct Int2DdsDataWriter *writer,
                                                const uint8_t *data,
                                                uintptr_t data_len,
                                                const uint8_t *key,
                                                uintptr_t key_len,
                                                int32_t timestamp_sec,
                                                uint32_t timestamp_nanosec);
/**
 * Block until all reliable DataReader entities have acknowledged all written data,
 * or until the timeout expires.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 */
Int2DdsRet int2dds_datawriter_wait_for_acknowledgments(const struct Int2DdsDataWriter *writer,
                                                       int64_t timeout_ms);
/**
 * Block until all reliable DataWriter entities owned by this Publisher have been
 * acknowledged by all matched reliable DataReader entities, or until the timeout expires.
 *
 * # Safety
 * - `publisher` must be a valid publisher
 */
Int2DdsRet int2dds_publisher_wait_for_acknowledgments(const struct Int2DdsPublisher *publisher,
                                                      int64_t timeout_ms);
/**
 * Register an instance from the full serialized sample. The canonical KeyHash is
 * derived from the sample by the core (matching the wire); `key`/`key_len` carry
 * the serialized sample bytes.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `key` must point to at least `key_len` readable bytes
 * - `handle_out` must be a valid pointer to a 16-byte array
 */
Int2DdsRet int2dds_datawriter_register_instance(const struct Int2DdsDataWriter *writer,
                                                const uint8_t *key,
                                                uintptr_t key_len,
                                                uint8_t (*handle_out)[16]);
/**
 * Dispose an instance from the full serialized sample. `key`/`key_len` carry the
 * serialized sample bytes (not a pre-serialized key); the core derives the canonical
 * KeyHash from them. A keyed topic must have been created with a full TypeObject
 * (int2dds_create_topic_with_type_info / _with_field_descriptors), otherwise this
 * returns INT2DDS_RET_PRECONDITION_NOT_MET.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `key` must point to at least `key_len` readable bytes
 * - `handle` must be a valid pointer to a 16-byte instance handle (or null for NIL)
 */
Int2DdsRet int2dds_datawriter_dispose(const struct Int2DdsDataWriter *writer,
                                      const uint8_t *key,
                                      uintptr_t key_len,
                                      const uint8_t (*handle)[16]);
/**
 * Unregister an instance from the full serialized sample. `key`/`key_len` carry the
 * serialized sample bytes (not a pre-serialized key); the core derives the canonical
 * KeyHash from them. A keyed topic must have been created with a full TypeObject
 * (int2dds_create_topic_with_type_info / _with_field_descriptors), otherwise this
 * returns INT2DDS_RET_PRECONDITION_NOT_MET.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `key` must point to at least `key_len` readable bytes
 * - `handle` must be a valid pointer to a 16-byte instance handle (or null for NIL)
 */
Int2DdsRet int2dds_datawriter_unregister_instance(const struct Int2DdsDataWriter *writer,
                                                  const uint8_t *key,
                                                  uintptr_t key_len,
                                                  const uint8_t (*handle)[16]);
/**
 * Lookup an instance handle from the full serialized sample. `key`/`key_len` carry the
 * serialized sample bytes (not a pre-serialized key); the core derives the canonical
 * KeyHash from them. A keyed topic must have been created with a full TypeObject
 * (int2dds_create_topic_with_type_info / _with_field_descriptors), otherwise this
 * returns INT2DDS_RET_PRECONDITION_NOT_MET.
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `key` must point to at least `key_len` readable bytes
 * - `handle_out` must be a valid pointer to a 16-byte array
 */
Int2DdsRet int2dds_datawriter_lookup_instance(const struct Int2DdsDataWriter *writer,
                                              const uint8_t *key,
                                              uintptr_t key_len,
                                              uint8_t (*handle_out)[16]);
/**
 * Get key value for an instance handle
 *
 * # Safety
 * - `writer` must be a valid datawriter
 * - `handle` must be a valid pointer to a 16-byte instance handle
 * - `key_buf` must point to at least `key_capacity` writable bytes
 * - `key_size_out` must be a valid pointer
 */
Int2DdsRet int2dds_datawriter_get_key_value(const struct Int2DdsDataWriter *writer,
                                            const uint8_t (*handle)[16],
                                            uint8_t *key_buf,
                                            uintptr_t key_capacity,
                                            uintptr_t *key_size_out);
/**
 * Assert liveliness for a DataWriter
 *
 * # Safety
 * - `writer` must be a valid datawriter
 */
Int2DdsRet int2dds_datawriter_assert_liveliness(const struct Int2DdsDataWriter *writer);